--- a/emulator/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/overlay/frameworks/base/core/res/res/values/config.xml
@@ -24,4 +24,7 @@
     <!-- Full qualified name of the class that implements
     com.android.internal.os.DeviceKeyHandler interface. -->
     <string name="config_deviceKeyHandlerClass" translatable="false">org.omnirom.device.KeyHandler</string>
+    <!-- make sure you enable this only if your device supports deep slepp
+    with active proximity sensor event listener -->
+    <bool name="config_proxiSensorWakupCheck">false</bool>
 </resources>
