du: update emulator overlay
Change-Id: I56cf689a933a312d0adf099964c71b25ede7a959

--- a/emulator/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/overlay/frameworks/base/core/res/res/values/config.xml
@@ -26,5 +26,6 @@
     <string name="config_deviceKeyHandlerClass" translatable="false">org.omnirom.device.KeyHandler</string>
     <!-- make sure you enable this only if your device supports deep slepp
     with active proximity sensor event listener -->
-    <bool name="config_proxiSensorWakupCheck">false</bool>
+    <bool name="config_proxiSensorWakupCheck">true</bool>
+    <bool name="config_showNavigationBar">true</bool>
 </resources>
