omni: update emulator overlay
Change-Id: I0d6201511e17b2cfbd3df25378e2438793ce927e

--- a/emulator/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/overlay/frameworks/base/core/res/res/values/config.xml
@@ -28,4 +28,7 @@
     with active proximity sensor event listener -->
     <bool name="config_proxiSensorWakupCheck">true</bool>
     <bool name="config_showNavigationBar">true</bool>
+    <!-- let people decide if they want keyguard shortcuts or not -->
+    <bool name="config_keyguardShowLeftAffordance">true</bool>
+    <bool name="config_keyguardShowCameraAffordance">true</bool>
 </resources>
