--- a/emulator/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/overlay/frameworks/base/core/res/res/values/config.xml
@@ -29,4 +29,17 @@
     <bool name="config_proxiSensorWakupCheck">true</bool>
     <bool name="config_showNavigationBar">true</bool>
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
+    <string name="config_mainBuiltInDisplayCutout">M 0,0 L -183, 0 A 24.0, 24.0, 0, 0, 1, -159.0, 22.0 A 64.0, 64.0, 0, 0, 0, -95.0, 80.0 L 95.0, 80.0 A 64.0, 64.0, 0, 0, 0, 159.0, 22.0 A 24.0, 24.0, 0, 0, 1, 183.0, 0 Z</string>
+    
+    <!-- Whether the display cutout region of the main built-in display should be forced to
+    black in software (to avoid aliasing or emulate a cutout that is not physically existent).
+    -->
+    <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
+    <bool name="config_windowIsRound">true</bool>
+    <bool name="config_smart_battery_available">true</bool>
+    <bool name="config_intrusiveNotificationLed">true</bool>
+    <bool name="config_intrusiveBatteryLed">true</bool>
+    <bool name="config_FastChargingLedSupported">true</bool>
+    <color name="config_defaultNotificationColor">#00ff00</color>
+
 </resources>
