--- a/emulator/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/emulator/overlay/frameworks/base/core/res/res/values/config.xml
@@ -28,12 +28,12 @@
     with active proximity sensor event listener -->
     <bool name="config_proxiSensorWakupCheck">true</bool>
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
-    <string name="config_mainBuiltInDisplayCutout">M 0,0 L -183, 0 A 24.0, 24.0, 0, 0, 1, -159.0, 22.0 A 64.0, 64.0, 0, 0, 0, -95.0, 80.0 L 95.0, 80.0 A 64.0, 64.0, 0, 0, 0, 159.0, 22.0 A 24.0, 24.0, 0, 0, 1, 183.0, 0 Z</string>
-    
+	    <!--<string name="config_mainBuiltInDisplayCutout">M 0,0 L -183, 0 A 24.0, 24.0, 0, 0, 1, -159.0, 22.0 A 64.0, 64.0, 0, 0, 0, -95.0, 80.0 L 95.0, 80.0 A 64.0, 64.0, 0, 0, 0, 159.0, 22.0 A 24.0, 24.0, 0, 0, 1, 183.0, 0 Z</string>-->
+
     <!-- Whether the display cutout region of the main built-in display should be forced to
     black in software (to avoid aliasing or emulate a cutout that is not physically existent).
     -->
-    <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
+	    <!--<bool name="config_fillMainBuiltInDisplayCutout">true</bool>-->
     <bool name="config_intrusiveNotificationLed">false</bool>
     <bool name="config_intrusiveBatteryLed">false</bool>
 </resources>
